<resources>
    <string name="app_name">CourtCounter</string>
    <string name="_1">0</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="_2_ppoints">+2 PPOINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="_3_Points">+3 POINTS</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="Free_throw">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_0">0</string>
</resources>
